# YAEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  imgui.ini  readme.md
App/: CMakeLists.txt
App/Source/: Main.cpp
Core/: CMakeLists.txt  dependencies.cmake  sources.cmake
Core/Shaders/: alphatest_discard.frag  bloom_downsample.comp  bloom_upsample.comp  common.glsl  csm_shadow.vert  cubemap.frag  cubemap.vert  deferred_lighting.frag  denoise.glsl  depth_prepass.frag  depth_prepass.vert  depth_prepass_instanced.vert  exposure_adapt.comp  exposure_histogram.comp  forward_transparent.frag  gbuffer.frag  gbuffer_terrain.frag  gbuffer_wireframe.frag  gizmo.frag  gizmo.vert  gizmo_sprite.frag  gizmo_sprite.vert  hiz.comp  instanced.vert  irradiance.frag  light_cull.comp  lighting_common.glsl  material.glsl  mesh.vert  no_shading.frag  noise.glsl  octahedron.glsl  particle.frag  particle.vert  pbr.glsl  post.glsl  prefilter.frag  quad.frag  quad.vert  shader.frag  (+13 more)
Core/Shared/: BloomData.h  ExposureData.h  FrameUniforms.h  GizmoPushConstants.h  LightData.h  LightProbeData.h  MaterialUniforms.h  ParticleInstance.h  SSAOKernel.h  ShadowData.h  SpritePushConstants.h  TerrainMaterialUniforms.h  TileCullData.h
Core/Source/: Application.cpp  Application.h  DebugUILayer.cpp  DebugUILayer.h  Engine.cpp  Engine.h  EventBus.h  Events.h  FreeCamLayer.cpp  FreeCamLayer.h  InputActionSystem.cpp  InputActionSystem.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  Layer.cpp  Layer.h  LayerManager.h  Log.h  Pch.h  SceneSnapshot.h  ServiceRegistry.h  Window.cpp  Window.h
Core/Source/Assets/: AssetManager.cpp  AssetManager.h  AssetManagerBase.h  CpuResourceData.h  CubeMapFile.cpp  CubeMapFile.h  CubeMapManager.cpp  CubeMapManager.h  Handle.h  IAssetManager.h  LightProbeManager.cpp  LightProbeManager.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  ModelBuilder.cpp  ModelBuilder.h  ModelDescription.h  ModelImporter.cpp  ModelImporter.h  ModelManager.cpp  ModelManager.h  SlotMap.h  TextureManager.cpp  TextureManager.h
Core/Source/Editor/: EditorCameraLayer.cpp  EditorCameraLayer.h  EditorContext.h  EditorLayer.cpp  EditorLayer.h  GizmoRenderer.cpp  GizmoRenderer.h  GlyphRasterizer.cpp  GlyphRasterizer.h  IEditorPanel.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDependencyGraph.cpp  ShaderDependencyGraph.h  ShaderHotReload.cpp  ShaderHotReload.h
Core/Source/Editor/Panels/: DetailsPanel.cpp  DetailsPanel.h  MaterialBrowserPanel.cpp  MaterialBrowserPanel.h  MaterialInspectorPanel.cpp  MaterialInspectorPanel.h  OutlinerPanel.cpp  OutlinerPanel.h  PerformancePanel.cpp  PerformancePanel.h  RenderSettingsPanel.cpp  RenderSettingsPanel.h  ViewportPanel.h
Core/Source/Editor/Utils/: CurveEditor.cpp  CurveEditor.h  EditorStyle.cpp  EditorStyle.h  EditorTextureCache.cpp  EditorTextureCache.h  FileDialog.cpp  FileDialog.h  SplinePathEditor.cpp  SplinePathEditor.h
Core/Source/Input/: InputActionSystem.cpp  InputActionSystem.h  InputSystem.cpp  InputSystem.h
Core/Source/Render/: CubemapConvolution.cpp  CubemapConvolution.h  DebugMarker.h  DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  FrameContext.h  FrameUniformBuffer.cpp  FrameUniformBuffer.h  FrustumCull.h  ImageBarrier.h  LightProbeAtlas.cpp  LightProbeAtlas.h  LightProbeBaker.cpp  LightProbeBaker.h  LightProbeStorageBuffer.cpp  LightProbeStorageBuffer.h  LightStorageBuffer.cpp  LightStorageBuffer.h  OffscreenRenderer.cpp  OffscreenRenderer.h  PerFrameData.cpp  PerFrameData.h  PipelineCache.cpp  PipelineCache.h  Render.Bloom.cpp  Render.Draw.cpp  Render.Editor.cpp  Render.HiZ.cpp  Render.Pipelines.cpp  Render.Setup.cpp  Render.cpp  Render.h  RenderBackend.cpp  RenderBackend.h  RenderContext.h  RenderGraph.cpp  RenderGraph.h  RenderObject.h  RenderSpecs.h  ShaderUtils.h  (+60 more)
Core/Source/Scene/: BoundsUpdateSystem.cpp  BoundsUpdateSystem.h  CollisionQueryService.cpp  CollisionQueryService.h  ComponentRegistry.h  Components.h  CoreComponentSerializers.cpp  CoreComponentSerializers.h  ISystem.h  ModelColliderSystem.cpp  ModelColliderSystem.h  RoadSystem.cpp  RoadSystem.h  ScatterSystem.cpp  ScatterSystem.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SceneSnapshot.h  SystemScheduler.cpp  SystemScheduler.h  TerrainSystem.cpp  TerrainSystem.h  TransformSystem.cpp  TransformSystem.h  YamlUtils.h
Core/Source/Utils/: CatmullRomCurve.h  Events.h  HeightmapLoader.cpp  HeightmapLoader.h  Log.h  MainThreadDispatcher.h  MipGenerator.cpp  MipGenerator.h  PrimitiveMeshFactory.cpp  PrimitiveMeshFactory.h  Random.h  Ray.h  RoadMeshGenerator.cpp  RoadMeshGenerator.h  ServiceRegistry.h  SplinePath2D.h  SplinePath3D.h  TerrainMeshGenerator.cpp  TerrainMeshGenerator.h  ThreadPool.cpp  ThreadPool.h  Timer.h  Topology.cpp  Topology.h  Utils.h
RacingDemo/: CMakeLists.txt
RacingDemo/Assets/Models/koenigsegg/: scene.gltf
RacingDemo/Assets/Models/nissan/: nissan.gltf
RacingDemo/Assets/Models/oldsmobile/: license.txt  scene.gltf
RacingDemo/Assets/Models/road/: license.txt  scene.gltf
RacingDemo/Assets/Models/rusty_car/: license.txt  scene.gltf
RacingDemo/Assets/Models/shrub/: shrub.gltf  shrub2.gltf
RacingDemo/Assets/Models/signs/: speed_limit.gltf  turn_sign.gltf
RacingDemo/Assets/Models/snag/: uploads_files_3734643_Old_snag.gltf
RacingDemo/Assets/Models/stone/: license.txt  scene.gltf
RacingDemo/Assets/Models/stone1/: license.txt  scene.gltf
RacingDemo/Assets/Models/stone2/: license.txt  scene.gltf
RacingDemo/Assets/Models/street1/: street.gltf
RacingDemo/Assets/Models/tree/: license.txt  scene.gltf
RacingDemo/Assets/Probes/: Entity_irr.yacm  Entity_pf.yacm  deset_probe_irr.yacm  deset_probe_pf.yacm  street_irr.yacm  street_pf.yacm
RacingDemo/Assets/Scenes/: racing.scene  racing2.reel  street.scene  terrain.scene  test.scene
RacingDemo/Assets/Textures/: NightSkyHDRI001_4K_HDR.hdr
RacingDemo/Source/: AppLayer.h  ControlsLayer.cpp  ControlsLayer.h  GameComponents.h  Main.cpp  ReelFormat.cpp  ReelFormat.h  ReelPlaybackLayer.cpp  ReelPlaybackLayer.h  SparkPool.h  Vertices.h
(+5 files in other folders)
